# Autono_Fruit_Plucking_Robot_TCTD

./: README.md
Embedded_Control/: CMakeLists.txt  package.xml
Embedded_Control/src/: VErticalActuator.ino
Software/: CMakeLists.txt  package.xml
Software/SSD-Tensorflow-master/notebooks/: ssd_notebook.ipynb
Software/fruit_detection_hog/: detector.py  fruit_detector  test.py
Software/realtime-object-detection/: ncs_realtime_objectdetection.py
devel/: .catkin  .rosinstall  setup.sh
embedded_control/: CMakeLists.txt  package.xml
embedded_control/launch/: launch_file.launch
embedded_control/msg/: cmd_control.msg  sensor_data.msg
embedded_control/src/: drive_by_wire.ino  joy.cpp  newjoy.cpp
embedded_control/src/Arduino_codes/: stepperTctd.ino
embedded_control/src/Arduino_codes/Servo/: Servo.ino
embedded_control/src/Arduino_codes/Sharpppp/: Sharpppp.ino
embedded_control/src/Arduino_codes/encoder/: encoder.ino
embedded_control/src/drive_by_wrie/: drive_by_wire.ino  drive_by_wrie.ino
embedded_control/src/drive_by_wrie/seedwla/: seedwla.ino
embedded_control/src/final.ino/: final.ino.ino
embedded_control/src/final.ino/seeding/: seedingmech.ino
